--- a/Views/Usuario/Registro.cshtml
+++ b/Views/Usuario/Registro.cshtml
@@ -7,7 +7,7 @@
     <p>@ViewBag.Message</p>
 }
 
-<form action="Registrar" method="post">
+<form action="@Url.Action("Crear", "Usuario")" method="post">
     <label>Usuario: </label>
     <input type="text" name="usuario" /><br />
     <label>Contraseña: </label>
@@ -17,4 +17,4 @@
     <input type="submit" value="Registrar" /><br />
 </form>
 <br />
-<a href="@Url.Action("Login", "Usuario")" class="btn btn-primary">Inicia sesion</a>
+<a href="@Url.Action("Login", "Usuario")" class="btn btn-primary">Volver</a>
