--- a/Views/Pedido/Crear.cshtml
+++ b/Views/Pedido/Crear.cshtml
@@ -65,7 +65,7 @@
                 const precio = selectedOption.getAttribute('data-precio');
 
                 // Actualiza el campo de precio
-                precioInput.value = precio ? '$' + precio : '';
+                precioInput.value = precio ? 'S/.' + precio : '';
             }
 
             // Llama a la función para establecer el precio inicial
